--- a/client/package.json
+++ b/client/package.json
@@ -71,6 +71,7 @@
     "react-dropzone": "^11.5.1",
     "react-flagkit": "^2.0.4",
     "react-form-validator-core": "^1.1.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-image-crop": "^9.0.5",
     "react-input-mask": "^2.0.4",
