--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,13 @@ services:
       - ./traefik.yml:/etc/traefik/traefik.yml
     networks:
       - crm_network
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - crm_network
   server:
     build:
       context: ./server
