--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     container_name: server
     environment:
       - PORT=80
-      # - MONGODB_URL=mongodb://admin:admin036203@mongodb-container:27017/crm_main?authSource=admin
+      - MONGODB_URL=mongodb://admin:admin036203@mongodb-container:27017/crm_main?authSource=admin
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     ports:
