--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,35 +1,13 @@
-FROM node:alpine as builder
+FROM nginx:alpine
 
-RUN mkdir -p /usr/src/client && chown -R node:node /usr/src/client
+# Copy cấu hình Nginx vào container
+COPY nginx.conf /etc/nginx/nginx.conf
 
-WORKDIR /usr/src/client
+# Copy build React vào thư mục phục vụ Nginx
+COPY build /usr/share/nginx/html
 
-COPY package.json ./
+# Expose port 80
+EXPOSE 80
 
-USER node
-
-RUN npm install --force
-
-COPY --chown=node:node . .
-
-# Set the timezone to the UK (GMT or BST)
-ENV TZ=Europe/London
-
-# Install tzdata to set the timezone
-USER root
-RUN apk add --no-cache tzdata \
-    && ln -sf /usr/share/zoneinfo/Europe/London /etc/localtime \
-    && echo "Europe/London" > /etc/timezone \
-    && apk del --purge tzdata
-
-USER node
-
-RUN npm run build
-
-FROM nginx:1.19.0
-WORKDIR /usr/share/nginx/html
-RUN rm -rf ./*
-COPY --from=builder /usr/src/client/build .
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+# Khởi động Nginx
+CMD ["nginx", "-g", "daemon off;"]
