--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -3,20 +3,24 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
-
+    
     location / {
         try_files $uri /index.html;
     }
 
-    # Serve static assets
+    # Serve static assets with long cache time
     location /static/ {
-        expires max;
-        add_header Cache-Control "public";
+        expires 6M;
+        add_header Cache-Control "public, max-age=15552000, immutable";
     }
 
+    # Từ chối truy cập thư mục /private/
     location /private/ {
         deny all;
     }
 
-    error_page 404 /index.html;
+    # Enable Gzip Compression (Tối ưu tốc độ tải trang)
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml+rss text/javascript;
+    gzip_vary on;
 }
