--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,26 +1,34 @@
-server {
-    listen 80;
+worker_processes auto;
 
-    root /usr/share/nginx/html;
-    index index.html;
-    
-    location / {
-        try_files $uri /index.html;
+events {
+    worker_connections 1024;
+}
+
+http {
+    server {
+        listen 80;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
+        location / {
+            try_files $uri /index.html;
+        }
+
+        # Serve static assets with long cache time
+        location /static/ {
+            expires 6M;
+            add_header Cache-Control "public, max-age=15552000, immutable";
+        }
+
+        # Từ chối truy cập thư mục /private/
+        location /private/ {
+            deny all;
+        }
+
+        # Enable Gzip Compression
+        gzip on;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml+rss text/javascript;
+        gzip_vary on;
     }
-
-    # Serve static assets with long cache time
-    location /static/ {
-        expires 6M;
-        add_header Cache-Control "public, max-age=15552000, immutable";
-    }
-
-    # Từ chối truy cập thư mục /private/
-    location /private/ {
-        deny all;
-    }
-
-    # Enable Gzip Compression (Tối ưu tốc độ tải trang)
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml+rss text/javascript;
-    gzip_vary on;
 }
