--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mongo
     container_name: mongodb-container
     restart: always
-    command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
+    command: ["mongod", "--replSet", "rs0", "--auth", "--keyFile", "/data/db/mongo-keyfile"]
     ports:
       - "27017:27017"
     environment:
