--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mongo
     container_name: mongodb-container
     restart: always
-    command: ["mongod", "--replSet", "rs0", "--auth", "--keyFile", "/data/db/mongo-keyfile"]
+    command: ["mongod", "--replSet", "rs0"]
     ports:
       - "27017:27017"
     environment:
@@ -13,7 +13,6 @@ services:
       MONGO_INITDB_DATABASE: crm_main
     volumes:
       - ./db/:/data/db
-      - ./mongo-keyfile:/data/db/mongo-keyfile
     networks:
       - crm_network
   traefik:
@@ -42,7 +41,7 @@ services:
     container_name: server
     environment:
       - PORT=80
-      - MONGODB_URL=mongodb://admin:admin036203@mongodb-container:27017/crm_main?authSource=admin
+      - MONGODB_URL=mongodb://admin:admin036203@mongodb-container:27017/crm_main?authSource=admin&replicaSet=rs0
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     ports:
