--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ name: crm
 services:
   mongodb:
     image: mongo
-    container_name: mongodb-container
+    container_name: mongodb
     restart: always
     command: ["mongod", "--replSet", "rs0"]
     ports:
