--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     container_name: server
     environment:
       - PORT=80
-      - MONGODB_URL=mongodb://admin:admin036203@mongodb-container:27017/crm_main?authSource=admin&replicaSet=rs0
+      - MONGODB_URL=mongodb://admin:admin036203@mongodb:27017/crm_main?authSource=admin&replicaSet=rs0
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     ports:
