--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,8 @@ name: crm
 services:
   mongodb:
     image: mongo
-    container_name: mongodb
+    container_name: mongodb-container
     restart: always
-    command: ["mongod", "--replSet", "rs0"]
     ports:
       - "27017:27017"
     environment:
@@ -41,7 +40,7 @@ services:
     container_name: server
     environment:
       - PORT=80
-      - MONGODB_URL=mongodb://admin:admin036203@mongodb:27017/crm_main?authSource=admin&replicaSet=rs0
+      - MONGODB_URL=mongodb://admin:admin036203@mongodb-container:27017/crm_main?authSource=admin
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     ports:
