--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
   mongodb:
     image: mongo
     container_name: mongodb-container
-    command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
     restart: always
     ports:
       - "27017:27017"
@@ -11,6 +10,7 @@ services:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin036203
       MONGO_INITDB_DATABASE: crm_main
+    command: ["mongod", "--bind_ip_all", "--replSet", "rs0", "--keyFile", "/data/keyfile"]
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
@@ -23,6 +23,7 @@ services:
     volumes:
       - "./db/:/data/db"
       - "mongo_config:/data/configdb"
+      - ./mongo-keyfile:/data/keyfile
     networks:
       - crm_network
   traefik:
