--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: mongodb-container
     volumes:
       - ./db/:/data/db
+    restart: "always"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: admin036203
@@ -20,6 +21,7 @@ services:
     command: "--bind_ip_all --quiet --logpath /dev/null --replSet rs0"
     networks:
       - crm_network
+
   mongo-init:
     image: mongo:8
     restart: "no"
@@ -27,15 +29,16 @@ services:
       mongodb:
         condition: service_healthy
     command: >
-      mongosh --host mongodb://admin:admin036203@mongodb-container:27017 --eval
+      mongosh --host mongodb:27017 --eval
       '
-      rs.initiate( {
-         _id : "rs0",
+      rs.initiate({
+         _id: "rs0",
          members: [
-            { _id: 0, host: "localhost:27017" }
+            { _id: 0, host: "mongodb:27017" }
          ]
       })
       '
+
   traefik:
     image: traefik:v3.2
     container_name: traefik
@@ -48,6 +51,7 @@ services:
       - ./traefik.yml:/etc/traefik/traefik.yml
     networks:
       - crm_network
+
   redis:
     image: redis:alpine
     container_name: redis
@@ -55,6 +59,7 @@ services:
       - "6379:6379"
     networks:
       - crm_network
+
   server:
     build:
       context: ./server
@@ -62,12 +67,11 @@ services:
     container_name: server
     environment:
       - PORT=80
-      - MONGODB_URL=mongodb://admin:admin036203@mongodb-container:27017/crm_main?authSource=admin&replicaSet=rs0
+      - MONGODB_URL=mongodb://admin:admin036203@mongodb:27017/crm_main?authSource=admin&replicaSet=rs0
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     ports:
       - "80"
-      # - "80:3000"
     restart: always
     depends_on:
       - "mongodb"
@@ -80,6 +84,7 @@ services:
       - "traefik.http.services.server.loadbalancer.server.port=80"
     networks:
       - crm_network
+
   client:
     build:
       context: ./client
@@ -87,7 +92,6 @@ services:
     container_name: client
     ports:
       - "80"
-      # - "80:3001"
     restart: always
     depends_on:
       - "mongodb"
@@ -100,9 +104,7 @@ services:
       - "traefik.http.services.client.loadbalancer.server.port=80"
     networks:
       - crm_network
+
 networks:
   crm_network:
     driver: bridge
-
-volumes:
-  mongo_config:
