--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,10 @@ name: crm
 services:
   mongodb:
     image: mongo:8
-    container_name: mongodb-container
     volumes:
       - ./db/:/data/db
     restart: "always"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin036203
       MONGO_INITDB_DATABASE: crm_main
     healthcheck:
       test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
@@ -21,7 +18,6 @@ services:
     command: "--bind_ip_all --quiet --logpath /dev/null --replSet rs0"
     networks:
       - crm_network
-
   mongo-init:
     image: mongo:8
     restart: "no"
@@ -31,14 +27,13 @@ services:
     command: >
       mongosh --host mongodb:27017 --eval
       '
-      rs.initiate({
-         _id: "rs0",
+      rs.initiate( {
+         _id : "rs0",
          members: [
-            { _id: 0, host: "mongodb:27017" }
+            { _id: 0, host: "localhost:27017" }
          ]
       })
       '
-
   traefik:
     image: traefik:v3.2
     container_name: traefik
@@ -51,7 +46,6 @@ services:
       - ./traefik.yml:/etc/traefik/traefik.yml
     networks:
       - crm_network
-
   redis:
     image: redis:alpine
     container_name: redis
@@ -59,7 +53,6 @@ services:
       - "6379:6379"
     networks:
       - crm_network
-
   server:
     build:
       context: ./server
@@ -67,11 +60,12 @@ services:
     container_name: server
     environment:
       - PORT=80
-      - MONGODB_URL=mongodb://admin:admin036203@mongodb:27017/crm_main?authSource=admin&replicaSet=rs0
+      - MONGODB_URL=mongodb://mongo:27017/crm_main?replicaSet=rs0
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     ports:
       - "80"
+      # - "80:3000"
     restart: always
     depends_on:
       - "mongodb"
@@ -84,7 +78,6 @@ services:
       - "traefik.http.services.server.loadbalancer.server.port=80"
     networks:
       - crm_network
-
   client:
     build:
       context: ./client
@@ -92,6 +85,7 @@ services:
     container_name: client
     ports:
       - "80"
+      # - "80:3001"
     restart: always
     depends_on:
       - "mongodb"
@@ -104,7 +98,9 @@ services:
       - "traefik.http.services.client.loadbalancer.server.port=80"
     networks:
       - crm_network
-
 networks:
   crm_network:
     driver: bridge
+
+volumes:
+  mongo_config:
