--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,18 +64,18 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     ports:
-      # - "80"
-      - "80:3000"
+      - "80"
+      # - "80:3000"
     restart: always
     depends_on:
       - "mongodb"
     volumes:
        - ./server:/usr/src/server
        - /usr/src/server/node_modules
-    # labels:
-    #   - "traefik.enable=true"
-    #   - "traefik.http.routers.server.rule=Host(`mayman.tathanhan.com`)"
-    #   - "traefik.http.services.server.loadbalancer.server.port=80"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.server.rule=Host(`mayman.tathanhan.com`)"
+      - "traefik.http.services.server.loadbalancer.server.port=80"
     networks:
       - crm_network
   client:
@@ -84,18 +84,18 @@ services:
       dockerfile: Dockerfile
     container_name: client
     ports:
-      # - "80"
-      - "80:3001"
+      - "80"
+      # - "80:3001"
     restart: always
     depends_on:
       - "mongodb"
     volumes:
        - ./client:/usr/src/client
        - /usr/src/client/node_modules
-    # labels:
-    #   - "traefik.enable=true"
-    #   - "traefik.http.routers.client.rule=Host(`thantai.tathanhan.com`)"
-    #   - "traefik.http.services.client.loadbalancer.server.port=80"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.client.rule=Host(`thantai.tathanhan.com`)"
+      - "traefik.http.services.client.loadbalancer.server.port=80"
     networks:
       - crm_network
 networks:
