--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,8 @@ services:
        - /usr/src/server/node_modules
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.server.rule=Host(`mayman.tathanhan.com`)"
+      # - "traefik.http.routers.server.rule=Host(`mayman.tathanhan.com`)"
+      - "traefik.http.routers.server.rule=Host(`apidev.tathanhan.com`)"
       - "traefik.http.services.server.loadbalancer.server.port=80"
     networks:
       - crm_network
@@ -94,7 +95,8 @@ services:
        - /usr/src/client/node_modules
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.client.rule=Host(`thantai.tathanhan.com`)"
+      # - "traefik.http.routers.client.rule=Host(`thantai.tathanhan.com`)"
+      - "traefik.http.routers.client.rule=Host(`dev.tathanhan.com`)"
       - "traefik.http.services.client.loadbalancer.server.port=80"
     networks:
       - crm_network
