--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       rs.initiate( {
          _id : "rs0",
          members: [
-            { _id: 0, host: "localhost:27017" }
+            { _id: 0, host: "mongodb:27017" }
          ]
       })
       '
