--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,8 +67,8 @@ services:
       - "80"
       # - "80:3000"
     restart: always
-    depends_on:
-      - "mongodb"
+    # depends_on:
+    #   - "mongodb"
     volumes:
        - ./server:/usr/src/server
        - /usr/src/server/node_modules
@@ -88,8 +88,8 @@ services:
       - "80"
       # - "80:3001"
     restart: always
-    depends_on:
-      - "mongodb"
+    # depends_on:
+    #   - "mongodb"
     volumes:
        - ./client:/usr/src/client
        - /usr/src/client/node_modules
