--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,39 @@
 name: crm
 services:
-  mongodb:
-    image: mongo:8
-    volumes:
-      - ./db/:/data/db
-    restart: "always"
-    environment:
-      MONGO_INITDB_DATABASE: crm_main
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
-      interval: 10s
-      timeout: 10s
-      retries: 5
-      start_period: 40s
-    ports:
-      - "27017:27017"
-    command: "--bind_ip_all --quiet --logpath /dev/null --replSet rs0"
-    networks:
-      - crm_network
-  mongo-init:
-    image: mongo:8
-    restart: "no"
-    depends_on:
-      mongodb:
-        condition: service_healthy
-    command: >
-      mongosh --host mongodb:27017 --eval
-      '
-      rs.initiate( {
-         _id : "rs0",
-         members: [
-            { _id: 0, host: "mongodb:27017" }
-         ]
-      })
-      '
+  # mongodb:
+  #   image: mongo:8
+  #   volumes:
+  #     - ./db/:/data/db
+  #   restart: "always"
+  #   environment:
+  #     MONGO_INITDB_DATABASE: crm_main
+  #   healthcheck:
+  #     test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+  #     interval: 10s
+  #     timeout: 10s
+  #     retries: 5
+  #     start_period: 40s
+  #   ports:
+  #     - "27017:27017"
+  #   command: "--bind_ip_all --quiet --logpath /dev/null --replSet rs0"
+  #   networks:
+  #     - crm_network
+  # mongo-init:
+  #   image: mongo:8
+  #   restart: "no"
+  #   depends_on:
+  #     mongodb:
+  #       condition: service_healthy
+  #   command: >
+  #     mongosh --host mongodb:27017 --eval
+  #     '
+  #     rs.initiate( {
+  #        _id : "rs0",
+  #        members: [
+  #           { _id: 0, host: "mongodb:27017" }
+  #        ]
+  #     })
+  #     '
   traefik:
     image: traefik:v3.2
     container_name: traefik
@@ -60,22 +60,22 @@ services:
     container_name: server
     environment:
       - PORT=80
-      - MONGODB_URL=mongodb://mongodb:27017/crm_main?replicaSet=rs0
+      # - MONGODB_URL=mongodb://mongodb:27017/crm_main?replicaSet=rs0
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     ports:
       - "80"
       # - "80:3000"
     restart: always
-    depends_on:
-      - "mongodb"
+    # depends_on:
+    #   - "mongodb"
     volumes:
        - ./server:/usr/src/server
        - /usr/src/server/node_modules
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.server.rule=Host(`mayman.tathanhan.com`)"
-      # - "traefik.http.routers.server.rule=Host(`apidev.tathanhan.com`)"
+      # - "traefik.http.routers.server.rule=Host(`mayman.tathanhan.com`)"
+      - "traefik.http.routers.server.rule=Host(`apidev.tathanhan.com`)"
       - "traefik.http.services.server.loadbalancer.server.port=80"
     networks:
       - crm_network
@@ -88,15 +88,15 @@ services:
       - "80"
       # - "80:3001"
     restart: always
-    depends_on:
-      - "mongodb"
+    # depends_on:
+    #   - "mongodb"
     volumes:
        - ./client:/usr/src/client
        - /usr/src/client/node_modules
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.client.rule=Host(`thantai.tathanhan.com`)"
-      # - "traefik.http.routers.client.rule=Host(`dev.tathanhan.com`)"
+      # - "traefik.http.routers.client.rule=Host(`thantai.tathanhan.com`)"
+      - "traefik.http.routers.client.rule=Host(`dev.tathanhan.com`)"
       - "traefik.http.services.client.loadbalancer.server.port=80"
     networks:
       - crm_network
