--- a/client/package.json
+++ b/client/package.json
@@ -104,6 +104,7 @@
     "react-table": "^7.7.0",
     "react-textarea-autosize": "^8.3.3",
     "react-toastify": "^8.1.0",
+    "react-tooltip": "^5.28.0",
     "react-transition-group": "^2.9.0",
     "react-validation": "^3.0.7",
     "react-vertical-timeline-component": "^3.5.2",
