--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+    restart: always
     networks:
       - crm_network
   server:
