--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "namor": "^2.0.3",
     "pe7-icon": "^1.0.4",
     "process": "^0.11.10",
+    "qr-code-styling": "^1.9.1",
     "rc-slider": "^9.7.5",
     "rc-tabs": "^10.1.1",
     "rc-tree": "^5.3.8",
