--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.8.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "bull": "^4.16.5",
@@ -21,8 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "mongoose-paginate-v2": "^1.9.0",
+    "nanoid": "^5.1.4",
     "qs": "^6.14.0",
-    "socket.io": "^4.8.1",
-    "xlsx": "^0.18.5"
+    "socket.io": "^4.8.1"
   }
 }
