--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "bull": "^4.16.5",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "cron": "^4.1.0",
     "dotenv": "^16.4.7",
@@ -22,6 +23,7 @@
     "mongoose": "^8.9.5",
     "mongoose-paginate-v2": "^1.9.0",
     "nanoid": "^5.1.4",
+    "qr-code-styling-node": "^1.5.0",
     "qs": "^6.14.0",
     "socket.io": "^4.8.1"
   }
