--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,8 +49,8 @@
 #   redis:
 #     image: redis:alpine
 #     container_name: redis
-#     ports:
-#       - "6379:6379"
+#     expose:
+#       - "6379"
 #     restart: always
 #     networks:
 #       - crm_network
