--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
        - /usr/src/server/node_modules
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.server.rule=Host(`mayman.tathanhan.com`)"
+      - "traefik.http.routers.server.rule=Host(`mayman.tathanhan.com`, `mayman.tathanhan.vn`)"
       - "traefik.http.services.server.loadbalancer.server.port=80"
     networks:
       - crm_network
@@ -93,7 +93,7 @@ services:
        - /usr/src/client/node_modules
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.client.rule=Host(`thantai.tathanhan.com`)"
+      - "traefik.http.routers.client.rule=Host(`thantai.tathanhan.com`, `thantai.tathanhan.vn`)"
       - "traefik.http.services.client.loadbalancer.server.port=80"
     networks:
       - crm_network
