--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       timeout: 10s
       retries: 5
       start_period: 40s
-    ports:
-      - "27017:27017"
+    expose:
+      - "27017"
     command: "--bind_ip_all --quiet --logpath /dev/null --replSet rs0"
     networks:
       - crm_network
