--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
   "description": "ArchitectUI - Bootstrap 5 Premium Admin Dashboard Template",
   "author": "DashboardPack.com",
   "dependencies": {
+    "@dnd-kit/accessibility": "^3.1.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
